--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -228,7 +228,7 @@
             [0.88, '恭喜发财'],
             [1.1, '一生一世'],
             [2.33, '笑看人生'],
-            [3.14, '数学之美'],
+            [3.14, 'biezhi 真棒 (๑•̀ㅂ•́)و✧'],
             [5.20, '爱你哟'],
             [6.66, '真的很6']
           ];
