--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -245,6 +245,9 @@
       <p style="text-align:center">
         要饭系统免费提供 <a href="https://github.com/biezhi/yaofan">获取源码</a>!
       </p>
+      <audio autoplay="autoplay" loop="loop" height="100" width="100">
+        <source src="https://c.coka.la/orAvPR.mp3" type="audio/mp3" />
+      </audio>
 </body>
 
 </html>
